# redowl

./: .gitignore  OWASP_HARDENING_REPORT.md  README.md  follow-ups.md  pyproject.toml  sample_hunt_result.json  sample_hunt_result.md  sample_report.json  sample_report.md
examples/: ollama.yaml  openai.yaml  reasoning-ollama-variants.yaml  reasoning-ollama.yaml  reasoning-openai.yaml
goals/prompt-injection/: definition.yaml
goals/prompt-injection/attacks/: PI-AUTHORITY-01.yaml  PI-CONTEXTRESET-01.yaml  PI-CONTINUATION-01.yaml  PI-DIRECT-01.yaml  PI-ENCODE-01.yaml  PI-FAKESYS-01.yaml  PI-FICTION-01.yaml  PI-INDIRECT-01.yaml  PI-MARKDOWN-01.yaml  PI-PERSONA-01.yaml  PI-TRANSLATE-01.yaml
redowl/: __init__.py  agent.py  cli.py  evaluator.py  goals.py  guardrails.py  reporter.py  runner.py
scripts/: generate_sample_hunt_result.py  generate_sample_report.py  generate_three_arm_chart.py  run_three_arm_experiment.py  run_three_run_protocol.py  verify_hunt_result.py
tests/: JB-001-dan-persona.yaml  JB-002-fictional-framing.yaml  PI-001-direct-override.yaml  PI-002-fake-system-tag.yaml  PI-003-indirect-document-injection.yaml
